# Auto_Dacon

./: .gitignore  LICENSE  README.md  auto_dacon.py  pyproject.toml  requirements-agentk-extra.txt  requirements-post-scaffold.txt  requirements-react.txt  requirements.txt  run_complete_pipeline.py
agentdocs/: mkdocs.yml
agentdocs/docs/: NLP.md  Submission.md  Tabular.md  add_competition.md  additional.md  agentkresults.md  benchmark.md  custom_task.md  index.md  llm.md  pipeline.md  rag.md  reactagent.md  reactresults.md  tabpfn.md  test_setup.md  visualize.md
agentdocs/docs/css/: custom.css
configs/: test_llm_config.yaml
configs/agent/: multi_llm_agent.yaml  think_and_code_llm_agent.yaml
configs/agent/commands/: default.yaml
configs/llm/: deepseek_hub.yaml  hf_hub.yaml  human.yaml  openai.yaml  openrouter.yaml
configs/llm/deepseek_hub/: deepseek-v3.yaml
configs/llm/hf_hub/: qwen2.5-72b.yaml
configs/llm/openrouter/: claude_sonnet_46.yaml  deepseek_v3.yaml  deepseek_v4_pro.yaml  gemini35_flash.yaml  glm51.yaml  gpt55.yaml  kimi_k27_code.yaml  qwen25_72b.yaml  qwen37_plus.yaml
configs/method/: agent-k-solve.yaml  data-prep-flow.yaml
configs/sweep/: sweep1.yaml
configs/task/: data_preprocessing.yaml  data_science_interact.yaml
configs/task/data_science/: rag_db.yaml
dashboard/: README.md  requirements.txt
dashboard/logs_analysis/: README.md  app.py  simple_app.py
docs/: DACON_WINDOWS.md
experiences/dacon/smart_warehouse_shipment_delay_prediction/: score.json  summary.txt
script/: run_complete_pipeline_with_react.py
src/agent/: __init__.py  agents.py  listener.py  memory.py  run_pipelines.py  start.py
src/agent/commands/: __init__.py  actions.py  composite.py  core.py  data_prep_custom_commands.py  ds_custom_commands.py  flows.py  simple_thoughts.py  summarizations.py  tool_use.py  utils_commands.py
src/agent/data_collection/: log_processor.py
src/agent/loggers/: base.py
src/agent/models/: distributed_hf.py  fastchat_api.py  llm.py  openai_api.py  stdin_llm.py
src/agent/prompts/: builder.py
src/agent/prompts/templates/data_preprocessing/: external_action.jinja  plan_cot.jinja  stage_decision.jinja  summarize_cot.jinja
src/agent/prompts/templates/data_preprocessing/column_types/: code.jinja  code_template_column_types.py  comment.jinja  loop_flow.jinja  summarize.jinja  think.jinja  unit_test_column_types.py
src/agent/prompts/templates/data_preprocessing/error_instruction/: error_instruction.jinja
src/agent/prompts/templates/data_preprocessing/fetch_and_summarize/: create_tab_targets_struct.jinja  decide_tab_targets_struct.jinja  detect_sample_submission.jinja  fetch.jinja  get_column_target_transform.jinja  get_positive_class.jinja  get_task_category.jinja  summarize_data.jinja  summarize_input_modality_maps.jinja  summarize_input_modality_maps_alt.jinja  summarize_metric.jinja  summarize_modality_transforms.jinja  summarize_submission_format.jinja  summarize_target_modality_maps.jinja  summarize_task.jinja
src/agent/prompts/templates/data_preprocessing/metric/: code.jinja  code_template_metric.py  code_template_ramp_metric.py  loop_flow.jinja  select_metric.jinja  summarize.jinja  think.jinja  unit_test_metric.py
src/agent/prompts/templates/data_preprocessing/plan/: input_stages.jinja  target_stages.jinja  transform_stages.jinja
src/agent/prompts/templates/data_preprocessing/snippets/: group_unit_test.jinja  group_unit_test_fix_error.jinja  unit_test.jinja  unit_test_fix_error.jinja
src/agent/prompts/templates/data_preprocessing/submission_format/: code.jinja  code_alt.jinja  code_template_submission_format.jinja  (+6 more)
src/agent/prompts/templates/data_science/: code_interpreter.jinja  context_example.jinja
src/agent/prompts/templates/default/: external_action.jinja
src/agent/prompts/templates/feature_engineering/: classical_tab_fe_code_template.py  classical_tab_fe_summary.jinja  code_error_report_for_code.jinja  code_error_report_think.jinja  code_prompt_classical_tab_fe.jinja  code_report.jinja  code_report_for_loop.jinja  loop_classical_tab_fe.jinja  system_prompt.jinja  think_before_code_classical_tab_fe.jinja  top_level_fe_decision.jinja
src/agent/prompts/templates/ramp/: hyperopt.jinja  ramp_action.jinja  submission.jinja  system_prompt.jinja  tab_classification.jinja  tab_regression.jinja
src/agent/tasks/: __init__.py  data_preprocessing.py  data_science.py  feature_engineering.py  tasks.py
src/agent/tasks/datascience_task/: ramp_utils.py  test.py  tuto_adding_stages.md  utils.py
src/agent/tasks/datascience_task/code_blanks/: bag_code.py  bag_code_template.py  bag_submissions.py  blend-old.py  blend.py  blend_params.py  class_imbalance.py  class_imbalance_code_template.py  classical_tab_fe_code_template.py  classical_tab_ml_code_template.py  create_blend_dataset.py  img_embed.py  img_embed_code_template.py  img_transform.py  regenerate.py  solve.py  solve_common_utils.py  solve_params.py  tab_embed.py  tab_fe.py  tab_fe_code_template.py  tab_head.py  tab_head_code_template.py  tab_preprocessed_embed_code_template.py  tab_regression_target_scaler.py  tab_regression_target_scaler_code_template.py  test_img_transform_code_template.py  train_img_transform_code_template.py  train_utils.py  txt_embed.py  txt_embed_code_template.py
src/agent/tools/: RAG_tool.py  base_tool.py  fetch_tool.py  python_interpreter.py
src/agent/tools/data_map/: map_dataset.py
src/agent/tools/vector_db/: faiss.py
src/agent/train/: models.py  ppo.py  reinforce.py  worker_distributed_hf.py
src/agent/utils/: rich_utils.py  utils.py
src/auto_dacon/research/: __init__.py  context.py  openrouter.py  prompts.py  runtime.py  schemas.py
tests/: test_hf.py  test_llm_choose.py
tests/auto_dacon/research/: test_context.py  test_local_submission.py  test_research_model_defaults.py  test_runtime.py  test_schemas.py
tests/ds_custom_commands/: test_dataset_stats.py
tests/helpers/: run_if.py
tests/utils/: random_llm.py  test_cv_task.txt  test_kaggle_fetch.py  test_llm.py  test_nlp_task.txt  test_tabular_task.txt  test_tasks.py
(+168 files in other folders)
