[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.2.0"
description = ""
authors =  [{ name = "Huawei - Agent K Team", email = "agent.k@huawei.com" }]
readme = "README.md"
requires-python = ">3.10,<3.12"
license = { file = "LICENSE" }

dependencies = [
"aiohttp==3.9.3 ; python_version >= '3.10' and python_version < '3.12'",
"aiosignal==1.3.1 ; python_version >= '3.10' and python_version < '3.12'",
"antlr4-python3-runtime==4.9.3 ; python_version >= '3.10' and python_version < '3.12'",
"anyio==4.3.0 ; python_version >= '3.10' and python_version < '3.12'",
"async-timeout==4.0.3 ; python_version >= '3.10' and python_version < '3.12'",
"attrs==23.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"backoff==2.2.1 ; python_version >= '3.10' and python_version < '3.12'",
"beautifulsoup4==4.12.3 ; python_version >= '3.10' and python_version < '3.12'",
"cachetools==5.3.2 ; python_version >= '3.10' and python_version < '3.12'",
"certifi==2024.2.2 ; python_version >= '3.10' and python_version < '3.12'",
"cffi==1.16.0 ; python_version >= '3.10' and python_version < '3.12' and platform_python_implementation != 'PyPy'",
"chardet==5.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"charset-normalizer==3.3.2 ; python_version >= '3.10' and python_version < '3.12'",
"click==8.1.7 ; python_version >= '3.10' and python_version < '3.12'",
"colorama==0.4.6 ; python_version >= '3.10' and python_version < '3.12'",
"coloredlogs==15.0.1 ; python_version >= '3.10' and python_version < '3.12'",
"colorlog==6.8.2 ; python_version >= '3.10' and python_version < '3.12'",
"contourpy==1.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"cryptography==42.0.5 ; python_version >= '3.10' and python_version < '3.12'",
"cycler==0.12.1 ; python_version >= '3.10' and python_version < '3.12'",
"dataclasses-json-speakeasy==0.5.11 ; python_version >= '3.10' and python_version < '3.12'",
"dataclasses-json==0.6.7 ; python_version >= '3.10' and python_version < '3.12'",
"datasets==2.17.1 ; python_version >= '3.10' and python_version < '3.12'",
"deprecated==1.2.14 ; python_version >= '3.10' and python_version < '3.12'",
"dill==0.3.8 ; python_version >= '3.10' and python_version < '3.12'",
"distro==1.9.0 ; python_version >= '3.10' and python_version < '3.12'",
"effdet==0.4.1 ; python_version >= '3.10' and python_version < '3.12'",
"emoji==2.10.1 ; python_version >= '3.10' and python_version < '3.12'",
"exceptiongroup==1.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"faiss-cpu==1.7.4 ; python_version >= '3.10' and python_version < '3.12'",
"filelock==3.13.1 ; python_version >= '3.10' and python_version < '3.12'",
"filetype==1.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"flatbuffers==23.5.26 ; python_version >= '3.10' and python_version < '3.12'",
"fonttools==4.49.0 ; python_version >= '3.10' and python_version < '3.12'",
"frozenlist==1.4.1 ; python_version >= '3.10' and python_version < '3.12'",
"fsspec==2023.10.0 ; python_version >= '3.10' and python_version < '3.12'",
"fsspec[http]==2023.10.0 ; python_version >= '3.10' and python_version < '3.12'",
"google-api-core==2.17.1 ; python_version >= '3.10' and python_version < '3.12'",
"google-api-python-client==2.117.0 ; python_version >= '3.10' and python_version < '3.12'",
"google-auth-httplib2==0.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"google-auth==2.28.1 ; python_version >= '3.10' and python_version < '3.12'",
"googleapis-common-protos==1.62.0 ; python_version >= '3.10' and python_version < '3.12'",
"greenlet==3.0.3 ; python_version >= '3.10' and python_version < '3.12' and (platform_machine == 'aarch64' or platform_machine == 'ppc64le' or platform_machine == 'x86_64' or platform_machine == 'amd64' or platform_machine == 'AMD64' or platform_machine == 'win32' or platform_machine == 'WIN32')",
"h11==0.14.0 ; python_version >= '3.10' and python_version < '3.12'",
"httpcore==1.0.4 ; python_version >= '3.10' and python_version < '3.12'",
"httplib2==0.22.0 ; python_version >= '3.10' and python_version < '3.12'",
"httpx==0.27.0 ; python_version >= '3.10' and python_version < '3.12'",
"huggingface-hub==0.25.1 ; python_version >= '3.10' and python_version < '3.12'",
"humanfriendly==10.0 ; python_version >= '3.10' and python_version < '3.12'",
"hydra-colorlog==1.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"hydra-core==1.3.2 ; python_version >= '3.10' and python_version < '3.12'",
"hydra-joblib-launcher==1.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"idna==3.6 ; python_version >= '3.10' and python_version < '3.12'",
"iopath==0.1.10 ; python_version >= '3.10' and python_version < '3.12'",
"jellyfish==1.0.3 ; python_version >= '3.10' and python_version < '3.12'",
"jinja2==3.1.3 ; python_version >= '3.10' and python_version < '3.12'",
"joblib==1.3.2 ; python_version >= '3.10' and python_version < '3.12'",
"jsonpatch==1.33 ; python_version >= '3.10' and python_version < '3.12'",
"jsonpath-python==1.0.6 ; python_version >= '3.10' and python_version < '3.12'",
"jsonpointer==2.4 ; python_version >= '3.10' and python_version < '3.12'",
"kiwisolver==1.4.5 ; python_version >= '3.10' and python_version < '3.12'",
"langchain-community==0.2.1 ; python_version >= '3.10' and python_version < '3.12'",
"langchain-core==0.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"langchain==0.2.2 ; python_version >= '3.10' and python_version < '3.12'",
"langdetect==1.0.9 ; python_version >= '3.10' and python_version < '3.12'",
"langsmith==0.1.75 ; python_version >= '3.10' and python_version < '3.12'",
"layoutparser[layoutmodels, tesseract]==0.3.4 ; python_version >= '3.10' and python_version < '3.12'",
"lightning==2.4.0 ; python_version >= '3.10' and python_version < '3.12'",
"lxml==5.1.0 ; python_version >= '3.10' and python_version < '3.12'",
"markdown-it-py==3.0.0 ; python_version >= '3.10' and python_version < '3.12'",
"markupsafe==2.1.5 ; python_version >= '3.10' and python_version < '3.12'",
"marshmallow==3.20.2 ; python_version >= '3.10' and python_version < '3.12'",
"matplotlib==3.9.2 ; python_version >= '3.10' and python_version < '3.12'",
"mdurl==0.1.2 ; python_version >= '3.10' and python_version < '3.12'",
"mpmath==1.3.0 ; python_version >= '3.10' and python_version < '3.12'",
"multidict==6.0.5 ; python_version >= '3.10' and python_version < '3.12'",
"multiprocess==0.70.16 ; python_version >= '3.10' and python_version < '3.12'",
"mypy-extensions==1.0.0 ; python_version >= '3.10' and python_version < '3.12'",
"nltk==3.8.1 ; python_version >= '3.10' and python_version < '3.12'",
"numpy==1.26.4 ; python_version >= '3.10' and python_version < '3.12'",
"omegaconf==2.3.0 ; python_version >= '3.10' and python_version < '3.12'",
"onnx==1.15.0 ; python_version >= '3.10' and python_version < '3.12'",
"onnxruntime==1.15.1 ; python_version >= '3.10' and python_version < '3.12'",
"openai==1.12.0 ; python_version >= '3.10' and python_version < '3.12'",
"opencv-python==4.9.0.80 ; python_version >= '3.10' and python_version < '3.12'",
"orjson==3.9.15 ; python_version >= '3.10' and python_version < '3.12'",
"packaging==23.2 ; python_version >= '3.10' and python_version < '3.12'",
"pandas==2.2.1 ; python_version >= '3.10' and python_version < '3.12'",
"pdf2image==1.17.0 ; python_version >= '3.10' and python_version < '3.12'",
"pdfminer-six==20221105 ; python_version >= '3.10' and python_version < '3.12'",
"pdfplumber==0.10.4 ; python_version >= '3.10' and python_version < '3.12'",
"pikepdf==8.13.0 ; python_version >= '3.10' and python_version < '3.12'",
"pillow-heif==0.15.0 ; python_version >= '3.10' and python_version < '3.12'",
"pillow==10.2.0 ; python_version >= '3.10' and python_version < '3.12'",
"portalocker==2.8.2 ; python_version >= '3.10' and python_version < '3.12'",
"protobuf==4.25.3 ; python_version >= '3.10' and python_version < '3.12'",
"pyarrow-hotfix==0.6 ; python_version >= '3.10' and python_version < '3.12'",
"pyarrow==15.0.0 ; python_version >= '3.10' and python_version < '3.12'",
"pyasn1-modules==0.3.0 ; python_version >= '3.10' and python_version < '3.12'",
"pyasn1==0.5.1 ; python_version >= '3.10' and python_version < '3.12'",
"pycocotools==2.0.7 ; python_version >= '3.10' and python_version < '3.12'",
"pycparser==2.21 ; python_version >= '3.10' and python_version < '3.12' and platform_python_implementation != 'PyPy'",
"pydantic==2.7.4 ; python_version >= '3.10' and python_version < '3.12'",
"pygments==2.17.2 ; python_version >= '3.10' and python_version < '3.12'",
"pymdown-extensions==10.16 ; python_version >= '3.10' and python_version < '3.12'",
"pyparsing==3.1.1 ; python_version >= '3.10' and python_version < '3.12'",
"pypdf==4.0.2 ; python_version >= '3.10' and python_version < '3.12'",
"pypdfium2==4.27.0 ; python_version >= '3.10' and python_version < '3.12'",
"pyreadline3==3.4.1 ; sys_platform == 'win32' and python_version >= '3.10' and python_version < '3.12'",
"pyrootutils==1.0.4 ; python_version >= '3.10' and python_version < '3.12'",
"pytesseract==0.3.10 ; python_version >= '3.10' and python_version < '3.12'",
"python-dateutil==2.8.2 ; python_version >= '3.10' and python_version < '3.12'",
"python-dotenv==1.0.1 ; python_version >= '3.10' and python_version < '3.12'",
"python-iso639==2024.2.7 ; python_version >= '3.10' and python_version < '3.12'",
"python-magic==0.4.27 ; python_version >= '3.10' and python_version < '3.12'",
"python-multipart==0.0.9 ; python_version >= '3.10' and python_version < '3.12'",
"pytorch-lightning==2.5.0.post0 ; python_version >= '3.10' and python_version < '3.12'",
"pytz==2024.1 ; python_version >= '3.10' and python_version < '3.12'",
"pywin32==306 ; python_version >= '3.10' and python_version < '3.12' and platform_system == 'Windows'",
"pyyaml==6.0.1 ; python_version >= '3.10' and python_version < '3.12'",
"rapidfuzz==3.6.1 ; python_version >= '3.10' and python_version < '3.12'",
"regex==2023.12.25 ; python_version >= '3.10' and python_version < '3.12'",
"requests==2.31.0 ; python_version >= '3.10' and python_version < '3.12'",
"rich==13.7.0 ; python_version >= '3.10' and python_version < '3.12'",
"rsa==4.9 ; python_version >= '3.10' and python_version < '3.12'",
"safetensors==0.4.2 ; python_version >= '3.10' and python_version < '3.12'",
"scipy==1.12.0 ; python_version >= '3.10' and python_version < '3.12'",
"selenium==4.20.0 ; python_version >= '3.10' and python_version < '3.12'",
"six==1.16.0 ; python_version >= '3.10' and python_version < '3.12'",
"sniffio==1.3.1 ; python_version >= '3.10' and python_version < '3.12'",
"soupsieve==2.5 ; python_version >= '3.10' and python_version < '3.12'",
"sqlalchemy==2.0.27 ; python_version >= '3.10' and python_version < '3.12'",
"sympy==1.13.1 ; python_version >= '3.10' and python_version < '3.12'",
"tabulate==0.9.0 ; python_version >= '3.10' and python_version < '3.12'",
"tenacity==8.2.3 ; python_version >= '3.10' and python_version < '3.12'",
"textblob==0.18.0.post0 ; python_version >= '3.10' and python_version < '3.12'",
"tiktoken==0.5.2 ; python_version >= '3.10' and python_version < '3.12'",
"timm==0.9.16 ; python_version >= '3.10' and python_version < '3.12'",
"tokenizers==0.15.2 ; python_version >= '3.10' and python_version < '3.12'",
"torch==2.5.1 ; python_version >= '3.10' and python_version < '3.12'",
"torchvision==0.20.1 ; python_version >= '3.10' and python_version < '3.12'",
"tqdm==4.66.2 ; python_version >= '3.10' and python_version < '3.12'",
"transformers==4.38.1 ; python_version >= '3.10' and python_version < '3.12'",
"triton==3.1.0 ; platform_system == 'Linux' and platform_machine == 'x86_64' and python_version >= '3.10' and python_version < '3.12'",
"typer==0.9.0 ; python_version >= '3.10' and python_version < '3.12'",
"typing-extensions==4.10.0 ; python_version >= '3.10' and python_version < '3.12'",
"typing-inspect==0.9.0 ; python_version >= '3.10' and python_version < '3.12'",
"tzdata==2024.1 ; python_version >= '3.10' and python_version < '3.12'",
"unstructured-client==0.18.0 ; python_version >= '3.10' and python_version < '3.12'",
"unstructured-inference==0.7.23 ; python_version >= '3.10' and python_version < '3.12'",
"unstructured-pytesseract==0.3.12 ; python_version >= '3.10' and python_version < '3.12'",
"unstructured[pdf]==0.12.4 ; python_version >= '3.10' and python_version < '3.12'",
"uritemplate==4.1.1 ; python_version >= '3.10' and python_version < '3.12'",
"urllib3==2.2.1 ; python_version >= '3.10' and python_version < '3.12'",
"wrapt==1.16.0 ; python_version >= '3.10' and python_version < '3.12'",
"xxhash==3.4.1 ; python_version >= '3.10' and python_version < '3.12'",
"yarl==1.9.4 ; python_version >= '3.10' and python_version < '3.12'",
]

[project.optional-dependencies]
backend = [
    "vllm==0.2.5",
    "fschat==0.2.34",
    "einops==0.7.0"
]
datascience = [
    "HEBO @ git+https://github.com/huawei-noah/HEBO.git@509d3e8fe34c663e22918dc07b6c4a7428056728#subdirectory=HEBO",
    "scikit-learn==1.2.2",
    "scikit-posthocs==0.11.4",
    "tensorboard==2.16.2",
    "jsonlines",
    "textdistance",
    "gensim==4.3.3",
    "sentencepiece==0.2.0",
    "nvidia-ml-py",
    "rarfile",
    "py7zr",
    "streamlit"
]
dev = [
    "black==23.7.0",
    "ipython==8.14.0",
    "neovim==0.3.1",
    "pre-commit==3.4.0",
    "pytest==8.0.0",
    "ruff==0.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.venv
  | docs
  | third_party
  | scratch
)/
'''

[tool.ruff]
line-length = 120

exclude = [".venv", "third_party"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
ignore = ["E731", "E402"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "ds_agent"]
single-line-exclusions = ["typing"]
known-third-party = ["datasets"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
